src/test/deca/syntax/invalid/class/method/missing_open_brace_12.deca
// Description:
//    Tests a syntactically incorrect program for a method declaration missing an open brace
//
// Results:
//    Line 12 : Error, expected '{'.
//
// History:
//    created on 07/01/2025

class TestClass {
    void methodName() 
        int a = 10;
    }
}